# platform.upstream.syncevolution

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.html  aclocal.m4  config.h.in  configure  configure.ac  configure.in  project.config  syncevolution-0.7.tar.gz.delta  syncevolution-0.7.tar.gz.id  syncevolution-0.8-alpha1.tar.gz.delta  syncevolution-0.8-alpha1.tar.gz.id  syncevolution-0.8-beta1.tar.gz.delta  syncevolution-0.8-beta1.tar.gz.id  syncevolution-0.8-beta2.tar.gz.delta  syncevolution-0.8-beta2.tar.gz.id  syncevolution-0.8-beta3.tar.gz.delta  syncevolution-0.8-beta3.tar.gz.id  syncevolution-0.8.1+0.9+beta1.tar.gz.delta  syncevolution-0.8.1+0.9+beta1.tar.gz.id  syncevolution-0.8.1+0.9+beta2.tar.gz.delta  syncevolution-0.8.1+0.9+beta2.tar.gz.id  syncevolution-0.8.1+0.9+beta3+20090723.tar.gz.delta  syncevolution-0.8.1+0.9+beta3+20090723.tar.gz.id  syncevolution-0.8.1+0.9+beta3.tar.gz.delta  syncevolution-0.8.1+0.9+beta3.tar.gz.id  syncevolution-0.8.1.tar.gz.delta  syncevolution-0.8.1.tar.gz.id  syncevolution-0.8.1a.tar.gz.delta  syncevolution-0.8.1a.tar.gz.id  syncevolution-0.8.tar.gz.delta  syncevolution-0.8.tar.gz.id  syncevolution-0.9+0.9.1beta1.tar.gz.delta  syncevolution-0.9+0.9.1beta1.tar.gz.id  syncevolution-0.9+0.9.1beta2.tar.gz.delta  syncevolution-0.9+0.9.1beta2.tar.gz.id  (+111 more)
src/synthesis/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.DLT  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.in  libsynthesis_contributor_agreement.doc  libsynthesis_contributor_agreement.pages  synthesis-sdk.pc.in  synthesis.pc.in
src/synthesis/doc/: SDK_manual.doc  SySync_config_reference.doc
src/synthesis/src/: CLIENT_FILES  EXCLUDE_FILES  EXTRA_FILES  Makefile.am  Makefile.am.in  Makefile.in  SDK_EXCLUDE_FILES  SDK_FILES  SERVER_FILES  client_engine_linux.mk  gen-makefile-am.sh  global_options.h  smltk-linker.map  synthesis-linker.map
src/synthesis/src/DB_interfaces/api_db/: DLL_interface.cpp  DLL_interface.h  dbapi.cpp  dbapi.h  dbapi_include.h  pluginapiagent.cpp  pluginapiagent.h  pluginapids.cpp  pluginapids.h  sync_dbapiconnect.cpp  sync_dbapiconnect.h
src/synthesis/src/DB_interfaces/odbc_db/: odbcapiagent.cpp  odbcapiagent.h  odbcapids.cpp  odbcapids.h  odbcdb.h  odbcdb_precomp.h
src/synthesis/src/Targets/ReleasedProducts/SDK/: target_options.h
src/synthesis/src/Targets/ReleasedProducts/clientEngine_opensource_ios/: target_options.h
src/synthesis/src/Targets/ReleasedProducts/clientEngine_opensource_linux/: clientengine_demo++.pch  clientengine_demo.pch  clientengine_demo_x86_linux_prefix.h  target_options.h
src/synthesis/src/Targets/ReleasedProducts/combiEngine_opensource_ios/: target_options.h
src/synthesis/src/Targets/ReleasedProducts/combiEngine_opensource_linux/: target_options.h
src/synthesis/src/Targets/clientEngine_dbg/: clientengine_dbg_x86.mch  target_options.h
src/synthesis/src/Targets/sysytool/: sysytool_x86.mch
src/synthesis/src/Transport_interfaces/engine/: engineclientbase.cpp  engineclientbase.h  enginesessiondispatch.cpp  enginesessiondispatch.h
src/synthesis/src/platform_adapters/: binfile.cpp  binfile.h  configfiles.h  platform_DLL.h  platform_file.h  platform_headers.h  platform_mutex.h  platform_thread.h  profiling.h  sysync_glob_vars.h  sysyncinit.cpp
src/synthesis/src/platform_adapters/linux/: configfiles.cpp  platform_DLL.cpp  platform_exec.c  platform_exec.h  platform_headers.h  platform_time.cpp  platform_time.h  platform_timezones.cpp  profiling.cpp
src/synthesis/src/platform_adapters/macosx/: configfiles.mm  platform_timezones.mm
src/synthesis/src/platform_adapters/unix_common/: platform_file.cpp  platform_mutex.cpp  platform_pipe.c  platform_pipe.h  platform_thread.cpp
src/synthesis/src/syncapps/clientEngine_custom/: clientengine_custom_Base.cpp  clientengine_custom_Base.h  product_options.h
src/synthesis/src/syncapps/serverEngine_custom/: combi_product_options.h  serverengine_custom_Base.cpp  serverengine_custom_Base.h
src/synthesis/src/syncapps/sysytool/: sysytool.cpp  sysytool_dispatch.cpp  sysytool_dispatch.h
src/synthesis/src/syncml_tk/doc/: ReadmeMaintenance4_1.doc  ReadmeMaintenance4_2.doc  ReadmeMaintenance4_3.doc  ReadmeMaintenance4_4.doc
src/synthesis/src/syncml_tk/src/sml/inc/: sml.h  smldef.h  (+1 more)
src/synthesis/src/sysync/: #timezones.cpp#  binfilebase.cpp  binfilebase.h  binfileimplclient.cpp  binfileimplclient.h  binfileimplds.cpp  binfileimplds.h  clientautosync_inc.cpp  clientautosync_inc.h  clientprovisioning_inc.cpp  configelement.cpp  configelement.h  customimplagent.cpp  customimplagent.h  customimplds.cpp  customimplds.h  dataconversion.cpp  dataobjtype.cpp  dataobjtype.h  debuglogger.cpp  debuglogger.h  engineentry.cpp  engineentry.h  engineinterface.cpp  engineinterface.h  global_progress.h  iso8601.cpp  iso8601.h  itemfield.cpp  itemfield.h  lineartime.cpp  lineartime.h  localengineds.cpp  localengineds.h  mimediritemtype.cpp  mimediritemtype.h  mimedirprofile.cpp  mimedirprofile.h  multifielditem.cpp  multifielditem.h  (+74 more)
src/synthesis/src/sysync_SDK/Sources/: SDK_support.cpp  SDK_support.h  SDK_util.c  SDK_util.h  UI_util.cpp  UI_util.h  admindata.cpp  admindata.h  blobs.cpp  blobs.h  dbitem.cpp  dbitem.h  engine_defs.h  enginemodulebase.cpp  enginemodulebase.h  enginemodulebridge.cpp  enginemodulebridge.h  generic_types.h  lineartime.cpp  lineartime.h  prefix_file.h  san.cpp  san.h  stringutil.cpp  stringutil.h  syerror.h  sync_dbapi.h  sync_dbapidef.h  sync_declarations.h  sync_include.h  sync_uiapi.h  syncexception.cpp  sysync_b64.cpp  sysync_noncopyable.h  sysync_utils.cpp  sysync_utils.h  timeutil.cpp  timeutil.h
src/synthesis/src/sysync_SDK/configs/: syncclient_sample_config.xml  syncserv_sample_config.xml
src/synthesis/src/sysync_SDK/ios_syncclient_app_sample/: FlipsideViewController.m  MainViewController.m  ios_syncclient_app_sample.xml
src/synthesis/src/sysync_SDK/sdk_sources_cocoa/: SyncEngine.h  SyncEngine.m  dbplugin_cocoa.h  dbplugin_cocoa.m
src/synthesis/src/sysync_ios.xcodeproj/: project.pbxproj
(+309 files in other folders)
